# vtb_mortech_backend

./: .dockerignore  .gitignore  AI_SETUP.md  Dockerfile  ENVIRONMENT_SETUP.md  README.md  alembic.ini  docker-compose.yml  migrate_ai_fields.py  promt.txt  requirements.txt  seqwe  seqwe.pub  test.py
alembic/: env.py
alembic/versions/: 0db6f72c8cdc_add_company_field_to_vacancies.py  4765353b9ecc_add_user_profile_fields.py  53a3fe5d92ba_initial_migration_with_applications.py  558e1eebdccd_initial_migration_with_applications.py  924e0ba09b07_add_benefits_column_to_vacancies.py  add_hidden_for_hr_to_resumes.py  b04a655e852d_initial_migration.py  b9113a660d76_initial_migration_with_processing_status.py  edbe5fb67599_add_strengths_weaknesses_missing_skills_.py  ffd9cfd844e1_remove_reviewed_status_from_database.py
app/: app.py  auth.py  config.py  database.py  logging_config.py  main.py  models.py  schemas.py
app/api/: applications.py  auth.py  deps.py  interviews.py  ocr.py  users.py  vacancies.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  interview.py  user.py  vacancy.py
app/routers/: analytics.py  applications.py  auth.py  interviews.py  resume_analysis.py  resumes.py  vacancies.py
app/schemas/: interview.py  ocr.py  user.py  vacancy.py
app/services/: ai_service.py  async_resume_processor.py  interview_service.py  job_queue.py  ocr_service.py  (+4 more)
avatar/: .env.example  26-gemini-multimodal-live.py  README.md  pyproject.toml
resume_analysis/: .env.example  README.md  app.py  requirements.txt  test.py
scripts/: seed_vacancies.py
